force-app/main/default/objects/Department__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the primary officer or staff member who usually handles complaints in this department.</description>
    <inlineHelpText>Refers to the primary officer or staff member who usually handles complaints in this department.</inlineHelpText>
    <label>Contact Person External</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>