force-app/main/default/objects/Department__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <description>Stores address of the department office (or head office).</description>
    <inlineHelpText>Stores address of the department office (or head office).</inlineHelpText>
    <label>Office Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>