force-app/main/default/objects/Department__c/fields/Resolution_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person responsible if SLA expires or grievance is not resolved.</description>
    <inlineHelpText>Person responsible if SLA expires or grievance is not resolved.</inlineHelpText>
    <label>Resolution Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Departments1</relationshipName>
    <type>Lookup</type>
</CustomField>